<resources>
    <string name="app_name" translatable="false">Travelry</string>
    <string name="email_sobre" translatable="false">Email:<u>pedroo.2023@alunos.utfpr.edu.br</u></string>
    <string name="utfpr_url" translatable="false">www.utfpr.edu.br</string>
    <string name="pais_label">Country:</string>
    <string name="label_data">Date:</string>
    <string name="btnLimpar">Clear</string>
    <string name="btnSalvar">Save</string>
    <string name="pais_hint">Enter the country</string>
    <string name="local_hint">Enter the local</string>
    <string name="label_local">Local:</string>
    <string name="toast_limpar">Data deleted</string>
    <string name="not_null_pais">You need to complete the country</string>
    <string name="not_null_local">You need to complete the local</string>
    <string name="toast_save_pais">Country:</string>
    <string name="toast_save_local">Local:</string>
    <string name="toast_save_data">Date:</string>
    <string name="data_hint">DD/MM/YYYY</string>
    <string name="not_null_data">You need to complete the date</string>
    <string name="checkbox_capital">It was on Capital:</string>
    <string name="checkbox_true">It was on Capital</string>
    <string name="checkbox_false">Outside the Capital</string>
    <string name="radiobutton_nacional">National</string>
    <string name="radiobutton_internacional">International</string>
    <string name="default_radiobutton">You need to choose the type of the travel</string>
    <string name="toast_save_radiobutton">Type of the travel:</string>
    <string name="label_radioGroup">Travel:</string>
    <string name="label_continente">Continent:</string>
    <string name="america_do_sul">South America</string>
    <string name="america_do_norte">North America</string>
    <string name="europa">Europe</string>
    <string name="africa">Africa</string>
    <string name="asia">Asia</string>
    <string name="oceania">Oceania</string>
    <string name="not_null_continent">You need to select the continent</string>
    <string name="toast_save_continent">Continent:</string>
    <string name="logo_utfpr">UTFPR\'s Logo</string>
    <string name="descricao_sobre">This is a project of mobile development</string>
    <string name="autoria_sobre">Student: <a href="https://github.com/pedroozanatta"> Pedro Henrique Zanatta de Oliveira</a></string>
    <string name="button_sobre">About</string>
    <string name="lista_de_viagens">Travels List</string>
    <string name="sobre_o_aplicativo">About the app</string>
    <string name="btn_cadastrar">Add</string>
    <string name="cadastro_de_viagens">Travel Register</string>
    <string name="nenhum_aplicativo_para_abrir_paginas_web">Theres no app to open web pages</string>
    <string name="nenhum_aplicativo_para_enviar_email">Theres no app to send email</string>
    <string name="editar">Update</string>
    <string name="excluir">Delete</string>
    <string name="editar_viagem">Update Travels</string>
    <string name="sugerir_tipo">Sugest Type</string>
    <string name="ordenacao">Ordering</string>
    <string name="restaurar_padroes">Restauring Configs</string>
    <string name="contato_pelo_aplicativo">Contact by the app</string>
    <string name="as_configuracoes_voltaram_para_o_padrao_de_instalacao">The configs has been changed to default</string>
    <string name="nome_utfpr">FEDERAL UNIVERSITY OF TECHNOLOGY OF PARANA</string>
    <string name="aviso">Warning</string>
    <string name="ok" translatable="false">OK</string>
    <string name="confirmacao">Confirmation</string>
    <string name="nao_alert">No</string>
    <string name="sim_alert">Yes</string>
    <string name="deletar_confirmacao">Do you want to delete?\n\"%1$s\"</string>
    <string name="deseja_voltar_padroes">Do you want to restore default settings?</string>
    <string name="desfazer">Undo</string>
    <string name="alteracao_realizada">Data update done</string>
    <string name="erro_insercao">Error trying to insert</string>
    <string name="erro_alteracao">Error trying to update</string>
    <string name="erro_exclusao">Error trying to delete</string>
    <string name="nome_ponto_turistico">Place Visited:</string>
    <string name="label_endereco">Address</string>
    <string name="label_categoria">Category:</string>
    <string name="restaurante">Restaurant</string>
    <string name="museu">Museum</string>
    <string name="parque">Amusement Park</string>
    <string name="comercio">Market</string>
    <string name="exposicao">Exposure</string>
    <string name="cadastro_dos_pontos_visitados_na_viagem">"New place at %1$s"</string>
    <string name="not_null_category">You need to select the category</string>
    <string name="erro_insercao_nome">You need to insert the name</string>
    <string name="erro_insercao_endereco">You need to insert the address</string>
    <string name="edicao_pontos_turisticos">Editing places from %1$s</string>
    <string name="pontos_turisticos">Touristic Points</string>
    <string name="nome_ponto_hint">Enter with the name of the sigth</string>
    <string name="endereco_hint">"Enter with the address "</string>
</resources>