<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menuItemAdicionar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/btn_cadastrar"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menuItemOrdenacao"
        android:icon="@drawable/ic_action_ascending_order"
        android:title="@string/ordenacao"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menuItemRestaurar"
        android:title="@string/restaurar_padroes" />
    <item
        android:id="@+id/menuItemSobre"
        android:title="@string/button_sobre" />
</menu>