<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menuItemSalvar"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/btnSalvar"
        app:showAsAction="always" />
    <item
        android:id="@+id/menuItemLimpar"
        android:icon="@drawable/ic_action_clear"
        android:title="@string/btnLimpar"
        app:showAsAction="always" />
    <item
        android:id="@+id/menuItemSugerirTipo"
        android:checkable="true"
        android:title="@string/sugerir_tipo" />
    <item
        android:id="@+id/menuItemPontoTuristico"
        android:icon="@android:drawable/ic_menu_mapmode"
        android:title="@string/pontos_turisticos"
        app:showAsAction="always" />
</menu>