<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ViagemActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textViewPais"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:fontFamily="sans-serif-medium"
            android:labelFor="@id/editTextPais"
            android:text="@string/pais_label"
            android:textColor="#1D1E1F"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextPais"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/pais_hint"
            android:inputType="text|textCapWords"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewPais" />

        <TextView
            android:id="@+id/textViewLocal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-medium"
            android:labelFor="@id/editTextLocal"
            android:text="@string/label_local"
            android:textColor="#1D1E1F"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextPais" />

        <EditText
            android:id="@+id/editTextLocal"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/local_hint"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewLocal" />

        <TextView
            android:id="@+id/textViewData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-medium"
            android:labelFor="@id/editTextData"
            android:text="@string/label_data"
            android:textColor="#1D1E1F"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextLocal" />

        <EditText
            android:id="@+id/editTextData"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:clickable="true"
            android:ems="10"
            android:focusable="false"
            android:hint="@string/data_hint"
            android:inputType="datetime|date"
            android:onClick="abrirCalendario"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewData" />

        <CheckBox
            android:id="@+id/checkBoxCapital"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/checkbox_capital"
            android:textColorHighlight="#303F9F"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextData" />

        <TextView
            android:id="@+id/textViewRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-medium"
            android:labelFor="@id/radioGroupTipo"
            android:text="@string/label_radioGroup"
            android:textColor="#1D1E1F"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxCapital" />

        <RadioGroup
            android:id="@+id/radioGroupTipo"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewRadioGroup">

            <RadioButton
                android:id="@+id/radioButtonNacional"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/radiobutton_nacional"
                android:textColorHighlight="#303F9F" />

            <RadioButton
                android:id="@+id/radioButtonInternacional"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/radiobutton_internacional"
                android:textColorHighlight="#303F9F" />
        </RadioGroup>

        <TextView
            android:id="@+id/textViewContinente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-medium"
            android:labelFor="@id/spinnerContinente"
            android:text="@string/label_continente"
            android:textColor="#1D1E1F"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroupTipo" />

        <Spinner
            android:id="@+id/spinnerContinente"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:entries="@array/continentes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewContinente" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>

